Добавлено автоопределение ширины и высоты документа

--- a/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
+++ b/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
@@ -203,7 +203,8 @@ ContentStringFormat="{}{0:P}">
                              HorizontalScrollBarVisibility="Visible"
                              VerticalScrollBarVisibility="Visible"
                              IsReadOnly="False">
-                    <FlowDocument PageWidth="100000"
+                    <FlowDocument x:Name="document"
+                        
                                   FontFamily="{Binding ElementName=fontComboBox, 
                         Path=SelectedValue, Mode=OneWay, 
                         UpdateSourceTrigger=PropertyChanged}">
