--- a/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
+++ b/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
@@ -111,7 +111,7 @@
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-                                <RowDefinition/>
+                                <RowDefinition Height="auto"/>
                                 <RowDefinition/>
                             </Grid.RowDefinitions>
                             <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center">
@@ -157,10 +157,10 @@
                             <Style TargetType="ColumnDefinition">
                                 <Setter Property="Width" Value="*" />
                                 <Style.Triggers>
-                                    <DataTrigger Binding="{Binding ElementName=hideImageCheckBox, Path=IsChecked}" Value="False">
+                                    <DataTrigger Binding="{Binding ElementName=hideImageCheckBox, Path=IsChecked}" Value="True">
                                         <Setter Property="Width" Value="0" />
                                         <Setter Property="IsEnabled" Value="False" />
-                                        <Setter Property="Visibility" Value="Collapsed" />
+                                        <!--<Setter Property="Visibility" Value="Collapsed" />-->
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
