--- a/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
+++ b/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
@@ -171,6 +171,41 @@
                             <toolkit:ColorPicker Grid.Row="1" Grid.Column="1" SelectedColor="{Binding ElementName=richTextBox, Path=Foreground, Converter={StaticResource colorConverter}}"/>
                         </Grid>
                     </Fluent:RibbonGroupBox>
+                    <Fluent:RibbonGroupBox Header="Настройки цвета изображения">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Яркость" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right"/>
+                            <toolkit:DoubleUpDown Grid.Column="1" Grid.Row="0"/>
+                            <Label Content="Контрастность" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right"/>
+                            <toolkit:DoubleUpDown Grid.Column="1" Grid.Row="1"/>
+                            <Label Content="Насыщенность" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right"/>
+                            <toolkit:DoubleUpDown Grid.Column="1" Grid.Row="2"/>
+                        </Grid>
+                    </Fluent:RibbonGroupBox>
+                    <Fluent:RibbonGroupBox Header="Ноывй формат ASCII">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Набор симболов"  Grid.Row="0" Grid.Column="0"/>
+                            <Fluent:TextBox Grid.Column="1" Grid.Row="0" MinWidth="100" MaxWidth="100"/>
+                            <Button Content="Добавить"  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,5,5,5"/>
+                        </Grid>
+                    </Fluent:RibbonGroupBox>
                 </Fluent:RibbonTabItem>
             </Fluent:Ribbon>
             <!--Основная панель-->
